Add some unit test

--- a/other/start.html
+++ b/other/start.html
@@ -31,7 +31,10 @@ form.addEventListener('submit', e => {
 // const result = addInputValues('3', '4')
 // If the result is not the sum of those numbers (ie 7),
 // then throw an error!
-
+const result = addInputValues('3','4')
+if (result !== 7) {
+  throw new Error(`Expect result 7 but result is ${result}`)
+}
 // Once you've finished your test, check your browser's console
 // and be sure the error is thrown.
 // Congratulations, you've written a test!
